# polyflare

./: .dockerignore  .gitignore  .gitmodules  Cargo.toml  Dockerfile  README.md  build.rs  cloc_wgsl.txt  gnu.plot  index.html  shell.nix  state.md  wasm.nix
.cargo/: config
gpu/: Cargo.toml
gpu/src/: instance.rs  lens_state.rs  main.rs  save_png.rs  scene.rs  state.rs  texture.rs
gpu/src/lens_state/: mod.rs
gpu/src/lib/: save_png.rs  state.rs  texture.rs
gpu/src/lib/lens_state/: mod.rs
gpu/src/lib/scenes/: mod.rs
gpu/src/lib/scenes/poly_optics/: compute.wgsl  convert.wgsl  draw.wgsl  mod.rs
gpu/src/lib/scenes/poly_poly/: compute.wgsl  convert.wgsl  draw.wgsl  mod.rs
gpu/src/lib/scenes/poly_res/: compute.wgsl  draw.wgsl  mod.rs
gpu/src/lib/scenes/poly_tri/: draw.wgsl  mod.rs  triangulate.wgsl
gpu/src/scenes/: mod.rs
gpu/src/scenes/demo3d/: mod.rs
gpu/src/scenes/game_of_life/: compute.wgsl  draw.wgsl  mod.rs
gpu/src/scenes/poly_optics/: compute.wgsl  convert.wgsl  draw.wgsl  mod.rs
gpu/src/scenes/poly_res/: compute.wgsl  convert.wgsl  draw.wgsl  mod.rs
gpu/src/scenes/poly_tri/: compute.wgsl  convert.wgsl  draw.wgsl  mod.rs  triangulate.wgsl
gpu_web/: Cargo.toml  README.md  build.rs
gpu_web/src/: main.rs
gpu_web/src/lib/: lib.rs  save_png.rs  state.rs
gpu_web/src/lib/lens_state/: mod.rs  sensor.rs
gpu_web/src/lib/scenes/: mod.rs
gpu_web/src/lib/scenes/poly_optics/: compute.wgsl  convert.wgsl  draw.wgsl  mod.rs
gpu_web/src/lib/scenes/poly_res/: mod.rs
gpu_web/src/lib/scenes/poly_tri/: convert.wgsl  draw.wgsl  mod.rs
lenses/: Canon-MassiveAnamorphicZoom.txt  ItohZoom.fx  KreitzerTele.fx  simple.txt  tessar.txt
openfx/: Cargo.toml  README.md
openfx/src/: basic.rs  lib.rs  wgpu_ofx.rs
plots/: fitting.plot
polynomial_optics/: Cargo.toml  LaCroix.csv  shell.nix
polynomial_optics/src/: bin.rs  line.rs
polynomial_optics/src/lib/: iexp.rs  legendre.rs  lib.rs  polynom.rs  raytracer.rs  raytracer_autodiff.rs  sparse_polynom.rs
python/: 10runs.py  coatings.py  legendre.py  plot_coeff.py  plot_combined.py  plot_dots.py  plot_dots_.py  plot_sa_omp.py  shell.nix
python/data/: 10runs.csv  10runs_nofit.csv  coating_angle_sweep.csv  coating_wl_sweep.csv  coefficients momentum and reset.csv  coefficients momentum.csv  coefficients og.csv  coefficients sparse.csv  coefficients with reset.csv  coefficients.csv  omp.csv  omp_10Runs.csv  omp_cheap10Runs.csv  poly_stats2000_5000.csv  sim_ann.csv  sim_ann_1k.csv  sim_ann_2k.csv
src/: bin.rs  camera.rs  compute.wgsl  demo3d.rs  draw.wgsl  instance.rs  line.rs  main.rs  model.rs  polynom.rs  scene.rs  shader.wgsl  state.rs  texture.rs
src/lib/: polynom.rs  raytracer.rs  sparse_polynom.rs
