[workspace]
resolver = "2"

members = [
    "gpu",
    "gpu_web",
    "openfx"
]

[patch.crates-io]
ofx = { git = "https://github.com/ilya-epifanov/ofx-rs.git", rev = "211f74c7d2955e5c53166af4f2a00f35ae6a363a" }
ofx_sys = { git = "https://github.com/ilya-epifanov/ofx-rs.git", rev = "211f74c7d2955e5c53166af4f2a00f35ae6a363a" }