[package]
name = "gpu"
version = "0.1.0"
authors = ["luksab <lukas@sabatschus.de>"]
edition = "2018"
resolver = "2"
build = "build.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
image = "0.23"
winit = { version = "0.25", features = [ "web-sys" ] }
cgmath = "0.18"
wgpu = "0.11"
rayon = "1.4"
pollster = "0.2"
bytemuck = { version = "1.4", features = [ "derive" ] }
anyhow = "1.0"
imgui = "0.8"
imgui-winit-support = "0.8"
imgui-wgpu = "0.18"
fastrand = "1.5"
png = "0.17"
directories = "4.0"

polynomial_optics = { path = "../polynomial_optics" }
