[package]
name = "polynomial_optics"
version = "0.1.0"
authors = ["luksab <lukas@sabatschus.de>"]
edition = "2018"

[[bin]]
name = "polynomial_optics"
path = "src/bin.rs"

[lib]
name = "polynomial_optics"
path = "src/lib/lib.rs"

[features]
sys = ["mathru_sys"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tiny-skia = "0.6.1"
num = "0.4.0"
cgmath = { version = "0.18", features = ["swizzle"] }
mathru_sys = { package = "mathru", version = "0.11", default-features = false, features = ["intel-mkl"], optional = true }
mathru = { package = "mathru", version = "0.11" }
serde = "1.0"
ron = "0.7"
csv = "1.1"
itertools = "0.10.3"
autodiff = {version = "0.4.0", features = ["cgmath"]}
fastrand = "1.5"
serde_arrays = "0.1.0"
rayon = "1.5"

rand = "0.8.5"

[dev-dependencies]
approx = "0.5.0"
